add swagger docs for level requests handlers
